src/App.css
.App {
  text-align: center;
  align-items: center;
}

.MessagesContainer {
  height: 100%
}

.MessagingIcon {
  position: fixed !important;
  bottom: 50px;
  right: 50px;
}

.SignUpPageForm {
  padding: 12px;
  margin-bottom: 16px;
  width: 560px;
}

.LoginPageForm {
  padding: 12px;
  margin-bottom: 16px;
  width: 560px;
}

.HiddenStyle {
  display: none;
}

.InstaPostFormStyle {
  padding: 12px;
  margin-bottom: 16px;
  width: 560px;
}

.InstaPostCard {
  padding: 12px;
  width: 560px;
}

.InstaPostMediaStyle {
  width: 100%;
  max-width: 700px;
}

.ImageTitleContainer {
  margin-right: 60%;
}

.ImageStyleLogo {
  width: 80px;
  margin-top: 30px;
}

.HeaderStyle {
  align-items: left;
  color: limegreen;
  background-color: white;
}

.Style2 {
  background-color: white;
}

.ListItemStyle {
  background-color: white;
  font-size: large;
  min-width: 150px;
}

.LikedItemStyle {
  color: red;
}

.Space {
  height: 20px;
}

.ListItemNameContainerStyle {
  padding: 10px;

}

.App-logo {
  height: 40vmin;
  pointer-events: none;
}

@media (prefers-reduced-motion: no-preference) {
  .App-logo {
    animation: App-logo-float infinite 3s ease-in-out;
  }
}

.App-header {
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-size: calc(10px + 2vmin);
}

.App-link {
  color: rgb(112, 76, 182);
}

@keyframes App-logo-float {
  0% {
    transform: translateY(0);
  }
  50% {
    transform: translateY(10px)
  }
  100% {
    transform: translateY(0px)
  }
}

